# enclone

./: .gitignore  BUILD.bazel  COMPILE.md  Cargo.toml  GUIDE  HISTORY  HISTORY.md  LICENSE.txt  Makefile  PREHISTORY  README  README.md  TESTING  acknowledgements  aha.html  aha.md  build  build.rs  build_help  cargoupdate  cd_datasets  crates.dot  data_version  datasets  datasets_medium_checksum  datasets_sha256  datasets_small_checksum  demo.html  demo_alt.html  diff_runs  diff_runs2  expanded.md  fetching_test_datasets.md  gex_files  google_font_test.html  gui.README  index.html  install.sh  install_debug.sh  last_cargo_update  (+17 more)
bio_edit/: Cargo.toml
bio_edit/src/: lib.rs
bio_edit/src/alignment/: distance.rs  mod.rs  poa.rs  sparse.rs
bio_edit/src/alphabets/: dna.rs  mod.rs  protein.rs  rna.rs
bio_edit/src/data_structures/: qgram_index.rs  rank_select.rs  suffix_array.rs  wavelet_matrix.rs
bio_edit/src/utils/: fastexp.rs  mod.rs
bugs/button_text_update_issue/: Cargo.toml  README
bugs/button_text_update_issue/src/: main.rs
bugs/canvas_in_scrollable/: Cargo.toml
enclone/: Cargo.toml  README.md  build.rs
enclone/src/: UNDOC_OPTIONS  allele.rs  defs.rs  enclone.out  enclone.test  enclone.test.tcr  enclone.test2  enclone.test_details  enclone.testdata  enclone.testdata.bcr.gex  enclone.testdata.mouse  enclone.testdata.targeted.bcr  enclone.testdata.tcr  enclone.testdata3  enclone.testlist.all  explore.rs  filter.rs  fwr3_freqs.rs  graph_filter.rs  group.rs  help1.rs  help3.rs  help4.rs  html.rs  info.rs  innate.rs  join.rs  join2.rs  join_core.rs  join_one.rs  join_utils.rs  lib.rs  load_gex.rs  loupe.rs  main_build_immcantation_inputs.rs  main_enclone.rs  mammalian_fixed_len.rs  misc1.rs  misc2.rs  misc3.rs  (+20 more)
enclone/test/inputs/: .gitattributes  NOTE  README  enclone_test10_output  enclone_test12_output  enclone_test15_output  enclone_test17_output  enclone_test19_output  enclone_test21_output  enclone_test4_output  enclone_test5_output  enclone_test6_output  enclone_test9_output
enclone/tests/: enclone_test.rs
enclone_build/: Cargo.toml  build.rs
enclone_build/src/: lib.rs  prepare_for_apocalypse.rs
enclone_core/: Cargo.toml  build.rs
enclone_core/src/: align_to_vdj_ref.rs  allowed_vars.rs  cell_color.rs  combine_group_pics.rs  convert_svg_to_png.rs  copy_for_enclone.rs  defs.rs  enclone.testdata  enclone_css_v2.css  enclone_structs.rs  hcomp.rs  join_one.rs  lib.rs  linear_condition.rs  logging.rs  main_testlist.rs  mammalian_fixed_len.rs  median.rs  opt_d.rs  packing.rs  plot_points.rs  prepare_for_apocalypse.rs  print_tools.rs  run_test.rs  set_speakers.rs  slurp.rs  stringulate.rs  test_def.rs  testdata.public.bcr.human  testdata.public.gex.human  testlist.rs  types.rs  update_restart.rs  var_reg.rs  variables  vdj_features.rs
enclone_core_res/: Cargo.toml
enclone_core_res/src/: lib.rs  print_tools.rs
enclone_denovo/: Cargo.toml
enclone_denovo/src/: const_ighd.rs  const_ighd_best_hits  const_ighd_initial_truth  const_motifs  genome_list  igha.data  ighd.data  ighe.data  ighg.data  ighm.data  igkc.data  iglc.data  isoseq_list  lib.rs  make_fwr3_freqs.rs  make_mammalian_fixed_len.rs  make_mammalian_pwms.rs  mammalian_fixed_len.rs  mammalian_fixed_len.table  mammalian_pwms.rs  mammalian_pwms.table  validation_data_notes  vdj_features.rs
enclone_exec/: Cargo.toml
enclone_exec/tests/: enclone.testdata  enclone_test1.rs  enclone_test2.rs  enclone_test3.rs  enclone_test4.rs  enclone_test_peak_mem.rs  main_testlist.rs  test_comx.rs.aside  testdata.public.bcr.human  testdata.public.gex.human  testdata.public.tcr.human  testdata.public.tcr.mouse  testlist.rs
enclone_exec/testx/inputs/: 101287.binary.sha256  123077_cells.tsv  123085.binary.sha256  (+4 more)
enclone_help/: Cargo.toml
enclone_help/src/: example1  example2  help1.rs  help2.rs  help3.rs  help4.rs  help5.rs  help_utils.rs  lib.rs
enclone_main/: Cargo.toml  server.proto  tmp.txt
enclone_main/src/: determine_ref.rs  disintegrate.rs  doublets.rs  enclone_client.rs  fcell.rs  filter_umi.rs  flag_defective.rs  inconsistent.rs  lib.rs  main_enclone.rs  merge_onesies.rs  opt_d_val.rs  populate_features.rs  sec_mem.rs  setup.rs  some_filters.rs  split_orbits.rs  start.rs  stop.rs  subset.rs  vars.rs  weak_chains.rs
enclone_main/test/: .gitignore
enclone_main/tests/: enclone_test.rs  enclone_test1.rs  enclone_test2.rs  enclone_test3.rs  enclone_test4.rs  enclone_test_peak_mem.rs  test_comx.rs.aside
enclone_paper/: Cargo.toml  make_release  test_data.csv  which_code_does_what
enclone_paper/data/: README  curves_1.csv  curves_2.csv  curves_3.csv  curves_4.csv  mat.194001  mat.575142  olga.yml  seqlogofig.csv
enclone_paper/src/: README  enclone.testdata.bcr.gex  lib.rs  plot_points.rs  plot_points_gen.rs
enclone_print/: Cargo.toml
enclone_print/src/: build_table_stuff.rs  define_mat.rs  filter.rs  finish_table.rs  gene_scan.rs  group.rs  innate.rs  lib.rs  loupe.rs  plot.rs  print_clonotypes.rs  print_utils1.rs  print_utils2.rs  print_utils3.rs  print_utils4.rs  print_utils5.rs  proc_cvar.rs  proc_cvar1.rs  proc_cvar2.rs  proc_cvar_auto.rs  proc_lvar.rs  proc_lvar1.rs  proc_lvar2.rs  proc_lvar_auto.rs  proto_io.rs  string_width.rs
enclone_server/: Cargo.toml
enclone_server/src/: lib.rs
enclone_server/tests/: test_comx.rs  test_output
enclone_server_proto/: Cargo.toml  build.rs  server.proto
enclone_server_proto/src/: lib.rs
enclone_tail/: Cargo.toml
enclone_tail/src/: align_n.rs  alluvial_fb.rs  assign_cell_color.rs  cat_var.rs  circles_to_svg.rs  clustal.rs  colors.rs  convert_svg_to_png.rs  display_tree.rs  fasta.rs  fate.rs  group.rs  group_colors.rs  grouper.rs  hex.rs  keeper_group.rs  legend.rs  lib.rs  mammalian_fixed_len.rs  neighbor.rs  newick.rs  pack_circles.rs  parseable.rs  phylip.rs  plot.rs  plot_points.rs  plot_points_gen.rs  plot_utils.rs  polygon.rs  print_dataset_vars.rs  print_stats.rs  requirements.rs  sens_spec.rs  set_speakers.rs  sim_mat_plot.rs  string_width.rs  tail.rs  ticks.rs  tree.rs
enclone_versions/: Cargo.toml
enclone_versions/src/: lib.rs
(+1018 files in other folders)
