[workspace]

members = [
    "enclone",
    "enclone_args",
    "enclone_core",
    "enclone_exec",
    "enclone_help",
    "enclone_main",
    "enclone_print",
    "enclone_proto",
    "enclone_tail",
    "enclone_tools",
    "enclone_visual",
]

exclude = [
    "bugs/button_text_update_issue",
    "bugs/canvas_in_scrollable",
    # excluding because it's a nuisance to support this
    # to restore, add back svg to features for iced
    "scroll_crash",
]

# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓

# dev mode profile: setting lto = true or lto = "thin" or codegen-units = 1 or even
# codegen-units = 5 all speed up execution (as measured by our cycle count test), by up to
# about 10%, but they all have at least some effect on compile time, and it doesn't seem worth it

[profile.dev]
debug = 1
opt-level = 3
split-debuginfo = "unpacked"

# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓

[profile.release]
debug = 1
lto = true
codegen-units = 1
overflow-checks = true

# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓

[profile.test]
debug = 1
opt-level = 3
split-debuginfo = "unpacked"

# Cautionary note.  We set package versions in enclone_versions, but it's not clear that
# this is a sound practice, particularly in the case where a crate outside the enclone repo
# depends on a crate in the enclone repo.  Such an external crate sees "*" and it's not clear
# what is done with that.

# ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓

# We attempted to speed up loading on the Mac using zld,
# https://github.com/michaeleisel/zld.  First we downloaded the current release at
# https://github.com/michaeleisel/zld/releases/tag/1.3.2, and then added these lines
# (without the #) to .cargo/config:
# [target.x86_64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/Users/david.jaffe/bin/zld"]
# To get this to work, we had to install Xcode 12.4, by going to the apple developers site.
# For the particular version of macOS we have, the later versions of Xcode wouldn't work.
# To complete the installation, we did
# sudo xcode-select -s /path/to/Xcode.app
# and then cargo b worked.  This seemed to speed up loading by 5-10%, but that did not seem
# like enough to justify using zld.  It might be worth trying again later, as it is being
# improved.
