[package]
name = "enclone_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
itertools = "0.10"
rayon = "1"

string_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
enclone_core = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
string_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }

[dev-dependencies]
assert_cmd = "2"

[[bin]]
name = "traceback1"
path = "src/bin/traceback1.rs"
