[package]
name = "enclone_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd.workspace = true
backtrace.workspace = true
chrono.workspace = true
itertools.workspace = true
string_utils.workspace = true
rayon.workspace = true

[build-dependencies]
chrono.workspace = true
string_utils.workspace = true
