[package]
name = "enclone_denovo"
version = "0.5.219"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
publish = false

[dependencies]
amino = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
bio = "0.39"
debruijn = "0.3"
equiv = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
fasta_tools = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
graph_simple = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
hyperbase = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
io_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
itertools = "0.10"
kmer_lookup = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
# poa_hmm = { git = "https://github.com/ban-m/partial_order_alignment.git" }
perf_stats = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
permutation = "0.4"
petgraph = "0.6"

rayon = "1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde_json = "1"
stats_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
string_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
superslice = "1"
tables = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
vdj_ann = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
vdj_ann_ref = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
vector_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "macklin/delete-client-server" }
