[package]
name = "enclone_denovo"
version = "0.5.219"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
publish = false

[dependencies]
amino = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
binary_vec_io = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
bio = "0.39"
debruijn = "0.3"
fasta_tools = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
io_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
itertools = "0.10"
# poa_hmm = { git = "https://github.com/ban-m/partial_order_alignment.git" }
perf_stats = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
pretty_trace = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main", features = ["pprof"]}
rayon = "1"
string_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
superslice = "1"
vdj_ann_ref = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
vector_utils = { git = "https://github.com/10XGenomics/enclone_ranger", branch = "main" }
