[package]
name = "enclone_exec"
version = "0.5.219"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
license-file = "LICENSE.txt"
publish = false


[[bin]]
name = "enclone"
path = "src/bin/enclone.rs"

[dependencies]
chrono.workspace = true
enclone_core.workspace = true
enclone_main = { path = "../enclone_main" }
enclone_testlist = { path = "../enclone_testlist" }
flate2.workspace = true
io_utils.workspace = true
itertools.workspace = true
nix.workspace = true
serde_json.workspace = true
string_utils.workspace = true
tokio.workspace = true
vector_utils.workspace = true

[dev-dependencies]
ansi_escape.workspace = true
anyhow.workspace = true
attohttpc.workspace = true
enclone_vars.workspace = true
enclone_proto.workspace = true
enclone_ranger.workspace = true
enclone_tools = { path = "../enclone_tools" }
flate2.workspace = true
fs_extra.workspace = true
itertools.workspace = true
perf_stats.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stats_utils.workspace = true
yaml-rust.workspace = true

[features]
default = []
basic = []
cpu = []
linkless = []
