[package]
name = "enclone_help"
version = "0.2.6"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
publish = false

[dependencies]
ansi_escape = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
enclone_core = { path = "../enclone_core" }
io_utils = "0.2.4"
string_utils = "0.1.1"
tables = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
