[package]
name = "enclone_main"
version = "0.3.1"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
publish = false

[dependencies]
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn.git" }
enclone_core = { path = "../enclone_core" }
enclone_help = { path = "../enclone_help" }
enclone_print = { path = "../enclone_print" }
enclone_tail = { path = "../enclone_tail" }
enclone = { path = "../enclone" }
equiv = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
io_utils = "*"
itertools = "*"
perf_stats = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
pretty_trace = "*"
rayon = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
stats_utils = "*"
string_utils = "*"
vdj_ann = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
vector_utils = "*"

[dependencies.hdf5]
features = ["conda"]
git = "https://github.com/pmarks/hdf5-rs.git"
rev = "0c98e57b2af1f4247708c198b324ba3a8bc18dba"

[dev-dependencies]
ansi_escape = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
attohttpc = { version = "0.12", default-features = false, features = ["compress", "tls-rustls"] }
failure = "*"
flate2 = "*"
rayon = "*"

[features]
basic = []
cpu = []
